@@ -1,3 +1,7 @@
+2006-11-19  Matthias Wimmer  <m@tthias.eu>
+
+    * jsm/modules/mod_register.c: improved error message
+
 2006-11-18  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/jabberd.c: added note about future package name change
